# S4HANA_Enforcer

./: buildRelease_rpm.sh  buildRelease_win.bat  readme.txt
prod/: CMakeLists.txt
prod/DAE_main/: CMakeLists.txt  DAE_main_utili.h  PreStartLog.cpp  PreStartLog.h  dae_main.cpp  dae_main_linux.cpp
prod/DAE_main/build_windows/: build.bat  makefile
prod/Detours/lib.X64/: detours.lib
prod/QueryCloudAZSDKCpp/: CMakeLists.txt  Makefile.inc  QueryCloudAZSDKCpp.vcxproj
prod/QueryCloudAZSDKCpp/build_windows/: build.bat  makefile
prod/QueryCloudAZSDKCpp/include/: Attributes.h  CommonFun.h  Connection.h  ConnectionPool.h  IQueryCloudAZ.h  NXLHttpClientAsync.h  QueryCloudAZExport.h  QueryCloudAZManager.h
prod/QueryCloudAZSDKCpp/src/: CommonFun.cpp  Connection.cpp  ConnectionPool.cpp  NXLHttpClient.cpp  NXLHttpClientAsync.cpp  QueryCloudAZExport.cpp  QueryCloudAZManager.cpp
prod/bootstrap/: AddDependence.cpp  AddDependence_windows.cpp  CMakeLists.txt  CommonTools.cpp  CommonTools.h  CommonTools_windows.cpp  CommonTools_windows.h  GetInternalFunction.cpp  GetInternalFunction_windows.cpp  Init.ps1  NXLHttpClientAsync.cpp  NXLHttpClientAsync.h  NXS4HConfig.cpp  NXS4HConfig.h  VerifyConfig.cpp  log.cpp  log.h  main.cpp
prod/bootstrap/build_windows/: build.bat  makefile
prod/bootstrap/build_windows/Project/: BootStrap.sln  (+2 more)
prod/build_windows/: BuildWindowsReadme.txt  SetBuildWindowsEnv.bat  build.bat  makefile  makefile.ver
prod/common/: MemoryMgr.cpp  MemoryMgr.h  Readme.md
prod/encrypttool/: CMakeLists.txt  encrypttool.cpp
prod/encrypttool/build_windows/: build.bat  makefile
prod/funchook/: CMakeLists.txt
prod/funchook/include/: funchook.h
prod/funchook/src/: funchook.c  funchook_internal.h  funchook_ppc64le.c
prod/hdb/include/: SQLDBC_Types.h
prod/hdb_new/: CMakeLists.txt  DAE.conf  DAE_full.conf  table_alias.conf  verify_config
prod/hdb_new/build_windows/: build.bat  makefile
prod/hdb_new/include/: EMMaskDef.h  EnforcerCtxImpl.h  HookImpl.h  KeyMaskOpr.h  MaskStrategyImpl.h  MyDisp+Work.h  MyDisp+Work_type.h  NXS4HConfig.h  NXS4HConfig_remote.h  NxlDbDataMgr.h  PolicyManager.h  PreStartLogProxy.h  QueryCAZPolicyCache.h  QueryCAZPolicyOpr.h  SAPMsgNotify.h  SqlDbcResourceInfoMgr.h  SqlDbcUserInfoMgr.h  TableAliasItem.h  TableAliasMgr.h  TableAliasMgr_remote.h  TableDataCache.h  TableMetaDataImpl.h  ViewManager.h  hdbEnforce.h  hook.h  interface.h  talk_with_hdb.h
prod/hdb_new/parser_view/: EMColumnExpr.cpp  EMColumnExpr.h  EMParser.cpp  EMTableExpr.cpp  EMTableExpr.h  EMViewMgr.cpp  EMViewMgr.h  EMViewStmt.cpp  EMViewStmt.h  view_interface.h
prod/hdb_new/parser_yacc/: EMMaskOpr.cpp  EMMaskOpr.h  EMS4HAst.cpp  EMS4HAst.h  EMS4HDeleteAst.cpp  EMS4HDeleteAst.h  EMS4HInsertAst.cpp  EMS4HInsertAst.h  EMS4HMutliSelectAst.cpp  EMS4HMutliSelectAst.h  EMS4HSelectAst.cpp  EMS4HSelectAst.h  EMS4HUpdateAst.cpp  EMS4HUpdateAst.h  EMS4HUpsertAst.cpp  EMS4HUpsertAst.h  keydef.h  node.cpp  node.h  node_struct.h  nodeimpl.cpp  parse_tool.cpp  parse_tool.h  parser_interface.h  reserved_word.h  serialize_format.h  sqlparser_hana_bison.cpp  sqlparser_hana_bison.h  sqlparser_hana_flex.cpp  sqlparser_hana_flex.h
prod/hdb_new/src/: EnforcerCtxImpl.cpp  HookImpl.cpp  KeyMaskOpr.cpp  MaskStrategyImpl.cpp  MyDisp+Work.cpp  MyDisp+Work_windows.cpp  NXS4HConfig.cpp  NXS4HConfig_remote.cpp  NxlDbDataMgr.cpp  PolicyManager.cpp  PreStartLogProxy.cpp  QueryCAZPolicyCache.cpp  QueryCAZPolicyOpr.cpp  SAPMsgNotify.cpp  SqlDbcResourceInfoMgr.cpp  SqlDbcUserInfoMgr.cpp  TableAliasItem.cpp  TableAliasMgr.cpp  TableAliasMgr_remote.cpp  TableDataCache.cpp  TableMetaDataImpl.cpp  ViewManager.cpp  hdbEnforce.cpp  hdb_new.cpp  hdb_new_windows.cpp  talk_with_hdb.cpp
prod/hdb_policymgr/: CMakeLists.txt  export.map
prod/hdb_policymgr/build_windows/: build.bat  makefile
prod/hdb_policymgr/include/: Handle.h  NXLHttpClient.h  Policy.h  PolicyEngine.h  PolicyExport.h  PolicyModelList.h  StructDefine.h  parse_expression.h  patch.h  policy_expression.h
prod/hdb_policymgr/src/: NXLHttpClient.cpp  Policy.cpp  PolicyEngine.cpp  PolicyEngine_windows.cpp  PolicyExport.cpp  PolicyModelList.cpp  TalkWithCC.cpp  TalkWithCC_Search.cpp  parse_expression.cpp  patch.cpp  policy_expression.cpp
prod/hdb_test/: CMakeLists.txt  main.cpp
prod/hdb_test/windows/: MyDisp+Work_fun.cpp  MyDisp+Work_fun.h  MyHDBWrapper.cpp  MyHDBWrapper.h  ReadMe.txt  SQLDBC.h  SqlProv.cpp  SqlProv.h  hdb_test.cpp  hdb_test.sln  hdb_test.vcxproj  hdb_test.vcxproj.filters  sql.txt  stdafx.cpp
prod/inject/: inject
prod/jsoncpp/: CMakeLists.txt  CMakeLists_old.txt  JSONCPP.cbp
prod/jsoncpp/build_windows/: build.bat  makefile
prod/jsoncpp/pkg-config/: jsoncpp.pc
prod/jsoncpp/src/: CMakeLists.txt
prod/patchpe/: CLHelper.cpp  CLHelper.h  CommonTools.cpp  CommonTools.h  CommonTypes.h  Example_IDTCode.cpp  FileMappingBase.cpp  FileMappingBase.h  Main.cpp  MyLog.h  PEBase.cpp  PEBase.h  PEIDTInjection.cpp  PEIDTInjection.h  PEMgr.cpp  PEMgr.h  PESectionInfo.cpp  PESectionInfo.h  PETools.cpp  PETools.h  PEView.cpp  PEView.h  PatchPE.sln  PatchPE.vcxproj  PatchPE.vcxproj.filters  PatchePE.sln  PatchePE.vcxproj  ReadMe.md
prod/patchpe/build_windows/: build.bat  makefile
prod/patchxcoff/: CMakeLists.txt  loadersec.c  loadersec.h  main.c  patchxcoff.h
prod/regservice/: RegService.sln
prod/regservice/RegService/: MyProcessManager.cpp  MyProcessManager.h  ReadMe.txt  RegService.aps  RegService.cpp  RegService.idl  RegService.rc  RegService.vcxproj  RegService.vcxproj.filters  RegService_i.c  RegService_i.h  Resource.h  stdafx.cpp  stdafx.h  util.cpp  util.h
prod/subhook/subhook_modify/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  subhook.cbp  subhook_x86.c
prod/tool/: AESEncrypt.cpp  AESEncrypt.h  CMakeLists.txt  aes.cpp  aes.h  log.cpp  log.h  md5.cpp  md5.h  tool.cpp  tool.h  tool_export.h
prod/tool/build_windows/: build.bat  makefile
prod/unit_test/: CMakeLists.txt  mask_strategy_test.h  table_meta_data_test.h  test.cpp
(+38 files in other folders)
